--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "nodemon": "^2.0.7"
   },
   "devDependencies": {},
+
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
